Fix project image overlap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,7 +126,7 @@ li > a[class~="active"]::before {
   position: relative;
   flex: 0 0 500px;
   max-width: 100%;
-  padding: 0 0.75rem;
+  padding: 0 0.5rem;
 }
 .embla__progress {
   position: relative;
